Fix bug with menus using a page wrap

--- a/example/src/example.less
+++ b/example/src/example.less
@@ -4,8 +4,13 @@
 .clearfix:before, .clearfix:after { content: ''; display: table; }
 .clearfix:after { clear: both; }
 
+html {
+  height: 100%;
+}
+
 body {
-  background: #b4bad2;
+  height: 100%;
+  background: #444;
   color: #fffce1;
   font-family: 'Raleway', Arial, sans-serif;
 }
@@ -21,8 +26,10 @@ a {
 }
 
 main {
+  height: 100%;
   padding: 3em 2em;
   text-align: center;
+  background: #b4bad2;
 }
 
 h1 {
